# automated-kingdom

./: .gitignore  Cargo.toml  README.md  code_gen.js  code_gen.js.map  code_gen.ts  code_gen_run.js  code_gen_run.js.map  code_gen_run.ts  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json
ak-server/: .gitignore  Cargo.toml
ak-server/code-gen/: types_game.js  types_game.js.map  types_game.ts
ak-server/src/: game.rs  handle_request.rs  lib.rs  main.rs  test_client.rs  types_client.rs  types_game.rs  types_server.rs  util.rs
automated-kingdom/: Cargo.toml  config.ron
automated-kingdom/asset-gen/: .gitignore  index.js  index.js.map  index.ts  pnpm-lock.yaml  tsconfig.json
automated-kingdom/assets/: config.ron
automated-kingdom/code-gen/: game.js  game.js.map  game.ts
automated-kingdom/src/: asset_map.rs  astar.rs  conf.rs  config.rs  game.rs  geometry.rs  main.rs  map.rs  math.rs  spritesheet.rs  texture_map.rs  util.rs
automated-kingdom/src/objects/: buildings.rs  camera.rs  mod.rs  ore_patch.rs  player.rs  worker.rs
launcher/: .gitignore  Cargo.toml  build.bat  build.rs  zip.ts
launcher/src/: main.rs
src/: asset_map.rs  astar.rs  conf.rs  game.rs  geometry.rs  main.rs  map.rs  map_gen.rs  math.rs  util.rs
src/objects/: camera.rs  player.rs  worker.rs
