[package]
name = "ak-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test-client"
path = "src/test_client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["clock"] }
colored = "2.0.0"
derive-new = "0.5.9"
lazy_static = "1.4.0"
rand = "0.8.5"
rmp-serde = "1.1.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.150", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"], optional = true }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[features]
server = ["dep:tokio"]
