[package]
name = "automated-kingdom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
lazy_static = "1.4.0"
macroquad = "0.3.25"
priority-queue = "1.3.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.150", features = ["derive"] }
rmp-serde = "1.1.1"
ak-server = { path = "../ak-server" }
image = "0.24.5"
